feat(task-api): show task based on id
